MB-18453: Make task scheduling fairer

Give each task a priority that is a
time + it's priority. This ensures a task
can never be overlooked by higher priority
tasks as it will trickle forward with time.

Change-Id: I6d2f9f6759d1647d7ccca587c89de180efbf8741